Fix order payment card overflow

--- a/admin-dev/themes/new-theme/scss/pages/_orders_view.scss
+++ b/admin-dev/themes/new-theme/scss/pages/_orders_view.scss
@@ -314,6 +314,16 @@
     .table {
       display: block;
     }
+
+    #view_order_payments_block {
+      .table {
+        &-head {
+          &-invoice {
+            min-width: auto;
+          }
+        }
+      }
+    }
   }
 }
 
